--- a/Desktop/RemindME/server/.env
+++ b/Desktop/RemindME/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://apbuggers2002:12ab34cd@cluster0.ynzsiqc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=kuchBhiDalDoKoiPharNhiPatdtahaismjha
-MAIL_USER=projectworkavinash@gmail.com
-MAIL_PASS=wxgx gfrj nvgn ugzf
+MONGO_URI=mongodb+srv://#userMongoAtlasUrl
+JWT_SECRET=XXXXXXXXX
+MAIL_USER=XXXXXXXXXX@gmail.com
+MAIL_PASS=**** **** **** ****
